@@ -11,6 +11,7 @@ add_poptorch_py_unit_test(batching)
 add_poptorch_py_unit_test(bert_small_and_medium)
 add_poptorch_py_unit_test(convs)
 add_poptorch_py_unit_test(custom_loss)
+add_poptorch_py_unit_test(half)
 add_poptorch_py_unit_test(inputs)
 add_poptorch_py_unit_test(losses)
 add_poptorch_py_unit_test(lstm)
